Fix overflow

--- a/src/components/ButtonRow/ButtonRow.module.css
+++ b/src/components/ButtonRow/ButtonRow.module.css
@@ -1,3 +1,10 @@
 .buttonRow {
-  width: fit-content;
+  overflow: auto;
+  white-space: nowrap;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 16px;
+  margin-left: -20px;
+  margin-right: -20px;
+  margin-bottom: -20px;
 }
